# helping-hand

./: .gitignore  Cargo.toml  README.md
arm/: a32_encindex.xml  adc_i.xml  adc_r.xml  adc_rr.xml  add_adr.xml  add_i.xml  add_r.xml  add_rr.xml  add_sp_i.xml  add_sp_r.xml  adr.xml  and_i.xml  and_r.xml  and_rr.xml  asr_mov_r.xml  asr_mov_rr.xml  asrs_mov_r.xml  asrs_mov_rr.xml  b.xml  bfc.xml  bfi.xml  bic_i.xml  bic_r.xml  bic_rr.xml  bkpt.xml  bl_i.xml  blx_r.xml  bx.xml  bxj.xml  cbnz.xml  clrex.xml  clz.xml  cmn_i.xml  cmn_r.xml  cmn_rr.xml  cmp_i.xml  cmp_r.xml  cmp_rr.xml  constraint_text_mappings.xml  cps.xml  (+269 more)
examples/: dirs.s  syn.s
hand/asm/: Cargo.toml
hand/asm/src/: cli.rs  main.rs
hand/ast/: Cargo.toml
hand/ast/src/: lib.rs  node.rs  token.rs  validation.rs
hand/ast/src/node/: addr.rs  arg.rs  reg.rs  shift.rs
hand/ci/: Cargo.toml
hand/ci/src/: cli.rs  main.rs
hand/dec/: Cargo.toml
hand/dec/src/: lib.rs
hand/enc/: Cargo.toml
hand/enc/src/: binary.rs  bits.rs  cursor.rs  directive.rs  instruction.rs  lib.rs  shape.rs
hand/enc/src/instruction/: helper.rs  inst.rs  ir.rs  (+1 more)
hand/error/: Cargo.toml
hand/lexer/: Cargo.toml
hand/lexer/src/: lib.rs
hand/middle/: Cargo.toml
hand/middle/src/: cursor.rs  higher.rs  ir.rs  lib.rs  lower.rs  lowering.rs  shape.rs  validation.rs
hand/parser/: Cargo.toml
hand/parser/src/: event.rs  grammar.rs  lib.rs  parser.rs
hand/syntax/: Cargo.toml
hand/syntax/src/: address.rs  cond.rs  directive.rs  generated.rs  kind.rs  lib.rs  macros.rs  offset.rs  ops.rs  reg.rs  shift.rs  sign.rs  tests.rs
(+4 files in other folders)
