[package]
name = "handasm"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntax = { path = "../syntax" }
lexer = { path = "../lexer"}
parser = { path = "../parser" }
ast = { path = "../ast" }
middle = { path = "../middle" }

anyhow = "1.0"
pico-args = "0.4.2"
